--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                     <div class="right">
                         <ul class="navbar-nav d-flex flex-row ">
 
-
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Link</a>
                             </li>
@@ -56,9 +55,10 @@
 
                     </div>
                 </div>
-
+            </nav>
+        </header>
     </div>
-    </nav>
+
     </header>
     <!-- /#site_header -->
     <main id="site_main"></main>
