format fixed and commented

--- a/index.html
+++ b/index.html
@@ -14,21 +14,44 @@
 </head>
 
 <body class="vw-100 ">
+
+
+
     <div class="body_app">
+
+        <!-- header -->
+
         <header id="site_header">
             <nav class="w-100">
+
+                <!-- nav-items -->
+
+
                 <div class="d-flex justify-content-center align-items-center">
+
+                    <!-- left -->
+
                     <div class="left">
                         <a class="navbar-brand" href="#">
                             <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
                         </a>
                     </div>
+
+                    <!-- /.left -->
+
+                    <!-- .center -->
+
                     <div class="center d-flex flex-grow-1">
                         <form class="d-flex w-100" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
+
+                    <!-- /.center -->
+
+                    <!-- .right -->
+
                     <div class="right">
                         <ul class="navbar-nav d-flex flex-row ">
 
@@ -54,15 +77,19 @@
                         </ul>
 
                     </div>
+                    <!-- /.right -->
                 </div>
             </nav>
         </header>
-    </div>
+        <!-- /#site_header -->
 
-    </header>
-    <!-- /#site_header -->
-    <main id="site_main"></main>
-    <!-- /#site_main -->
+
+
+        <main id="site_main">
+
+
+        </main>
+        <!-- /#site_main -->
     </div>
     <!-- /.body_app -->
 
