add side bar and top main

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Dashboard Bootstrap</title>
 </head>
 
-<body class="vw-100 ">
+<body class="vh-100">
 
 
 
@@ -87,6 +87,65 @@
 
         <main id="site_main">
 
+            <div class="side_bar d-flex flex-column justify-content-between p-3">
+                <div class="side_top">
+                    <div class="side_bar_item">
+                        <a href="">
+                            <i class="fa-solid fa-house"></i> <span>Home</span>
+                        </a>
+                    </div>
+
+                    <div class="side_bar_item">
+                        <a href="">
+                            <i class="fa-solid fa-house"></i> <span>Home</span>
+                        </a>
+                    </div>
+
+                    <div class="side_bar_item">
+                        <a href="">
+                            <i class="fa-solid fa-house"></i> <span>Home</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="side_bottom">
+
+                    <div class="side_bar_item">
+                        <a href="">
+                            <i class="fa-solid fa-house"></i> <span>Home</span>
+                        </a>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="main_right d-flex flex-grow-1">
+                <div class="main_top d-flex ">
+                    <div class="main_top_left">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto officiis expedita
+                        reiciendis
+                        cumque perspiciatis cupiditate esse est obcaecati eum voluptatem ad, natus a vero. Inventore qui
+                        ex
+                        natus dolores at?
+                    </div>
+                    <div class="d-flex">
+                        <div class="main_top_center col-lg-8">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsum labore veritatis
+                            expedita
+                            sint fugiat. Fugiat tempore harum illum reprehenderit impedit autem distinctio cupiditate
+                            illo!
+                            Sed, aut? Commodi, voluptatibus non!
+                        </div>
+                        <div class="main_top_right col-lg-4">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione exercitationem enim fugiat
+                            quidem beatae iste sequi porro natus. Dolorem culpa earum aliquid, nostrum aperiam
+                            repudiandae
+                            assumenda totam voluptate hic tenetur?
+
+                        </div>
+                    </div>
+                </div>
+                <div class="main_body"></div>
+            </div>
 
         </main>
         <!-- /#site_main -->
