responsiv top main

--- a/index.html
+++ b/index.html
@@ -119,27 +119,23 @@
 
             </div>
             <div class="main_right d-flex flex-grow-1">
-                <div class="main_top d-flex ">
-                    <div class="main_top_left">
+                <div class="main_top d-flex col-12  ">
+
+
+                    <div class="main_top_left d-flex col-sm-4 col-md-6">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto officiis expedita
                         reiciendis
-                        cumque perspiciatis cupiditate esse est obcaecati eum voluptatem ad, natus a vero. Inventore qui
-                        ex
-                        natus dolores at?
+
                     </div>
-                    <div class="d-flex">
-                        <div class="main_top_center col-lg-8">
+                    <div class="center_plus_right d-flex  col-12 col-sm-8 col-md-6">
+                        <div class="main_top_center d-flex col-md-8">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsum labore veritatis
                             expedita
-                            sint fugiat. Fugiat tempore harum illum reprehenderit impedit autem distinctio cupiditate
-                            illo!
-                            Sed, aut? Commodi, voluptatibus non!
+
                         </div>
-                        <div class="main_top_right col-lg-4">
+                        <div class="main_top_right d-flex col-md-4">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione exercitationem enim fugiat
-                            quidem beatae iste sequi porro natus. Dolorem culpa earum aliquid, nostrum aperiam
-                            repudiandae
-                            assumenda totam voluptate hic tenetur?
+
 
                         </div>
                     </div>
