add list card main body

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
             </div>
-            <div class="main_right d-flex flex-grow-1">
+            <div class="main_right d-flex flex-column flex-grow-1">
                 <div class="main_top d-flex col-12  ">
 
 
@@ -243,7 +243,121 @@
                         </div>
                     </div>
                 </div>
-                <div class="main_body"></div>
+                <div class="main_body col-12">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title p-2">Card title</h5>
+                                    <table class="col-12 my-3 ">
+                                        <thead>
+                                            <tr class="border-bottom ">
+                                                <th class="col-6 col-sm-4 col-md-8 col-lg-4">Nome</th>
+                                                <th class="start_date col-sm-2 col-md-4 col-lg-4 text-center">
+                                                    Data Inizio
+                                                </th>
+                                                <th class="roi col-sm-2  text-center">ROI</th>
+                                                <th class="col-3 col-sm-2 text-center">Stato</th>
+                                                <th class="col-3 col-sm-2 text-center">Azioni</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                            <tr class="border-bottom">
+                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
+                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
+                                                <td class="roi col-sm-2 text-center">20%</td>
+                                                <td class="col-sm-2 text-center">Done</td>
+                                                <td class="col-sm-2 text-center">x - y </td>
+                                            </tr>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="card"></div>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <div class="card"></div>
+                                <div class="card"></div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+                </div>
             </div>
 
         </main>
