--- a/index.html
+++ b/index.html
@@ -249,101 +249,76 @@
                             <div class="col-12 col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title p-2">Card title</h5>
-                                    <table class="col-12 my-3 ">
+
+                                    <table class="table">
                                         <thead>
-                                            <tr class="border-bottom ">
-                                                <th class="col-6 col-sm-4 col-md-8 col-lg-4">Nome</th>
-                                                <th class="start_date col-sm-2 col-md-4 col-lg-4 text-center">
-                                                    Data Inizio
-                                                </th>
-                                                <th class="roi col-sm-2  text-center">ROI</th>
-                                                <th class="col-3 col-sm-2 text-center">Stato</th>
-                                                <th class="col-3 col-sm-2 text-center">Azioni</th>
-                                            </tr>
+                                            <th class="col-4 col-md-3 col-lg-5">Nome</th>
+                                            <th class="start-date col-2">Data inizio</th>
+                                            <th class="roi col-2">ROI</th>
+                                            <th class="col-4 col-sm-2">Stato</th>
+                                            <th class="col-4 col-sm-2">Azioni</th>
                                         </thead>
                                         <tbody>
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
-                                            </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
-                                            </tr>
-
-                                            <tr class="border-bottom">
-                                                <th class="col-6 col-sm-4 col-md-8 ">Class</th>
-                                                <td class="start_date col  col-sm-2 text-center">15 Feb 2024</td>
-                                                <td class="roi col-sm-2 text-center">20%</td>
-                                                <td class="col-sm-2 text-center">Done</td>
-                                                <td class="col-sm-2 text-center">x - y </td>
+                                            <tr>
+                                                <td class="">Alfreds </td>
+                                                <td class="start-date">Maria </td>
+                                                <td class="roi">Germany</td>
+                                                <td class="">Maria </td>
+                                                <td class="">Maria </td>
                                             </tr>
 
                                         </tbody>
                                     </table>
+
                                 </div>
                                 <div class="card"></div>
                             </div>
