--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="main_body col-12">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-12 col-md-8">
+                            <div class="g-3  col-12 col-md-8">
                                 <div class="card-body">
                                     <h5 class="card-title p-2">Card title</h5>
 
@@ -320,7 +320,36 @@
                                     </table>
 
                                 </div>
-                                <div class="card"></div>
+                                <div class="card-body">
+                                    <h5>F.A.Q.</h5>
+                                    <button class="my_accordion">Section 1</button>
+                                    <div class="my_panel">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore
+                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                            laboris nisi ut aliquip ex ea commodo
+                                            consequat.</p>
+                                    </div>
+
+                                    <button class="my_accordion">Section 2</button>
+                                    <div class="my_panel">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore
+                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                            laboris nisi ut aliquip ex ea commodo
+                                            consequat.</p>
+                                    </div>
+
+                                    <button class="my_accordion">Section 3</button>
+                                    <div class="my_panel">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                            tempor incididunt ut labore et dolore
+                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                            laboris nisi ut aliquip ex ea commodo
+                                            consequat.</p>
+                                    </div>
+
+                                </div>
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="card"></div>
@@ -344,30 +373,26 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-
-
-            // offcanvas form
-            // Example starter JavaScript for disabling form submissions if there are invalid fields
-            (() => {
-                'use strict'
-
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                const forms = document.querySelectorAll('.needs-validation')
-
-                // Loop over them and prevent submission
-                Array.from(forms).forEach(form => {
-                    form.addEventListener('submit', event => {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-            })()
-
         </script>
+
+    <script>
+
+        var acc = document.getElementsByClassName("my_accordion");
+        var i;
+        var panel = document.getElementsByClassName("my_panel");
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.maxHeight) {
+                    panel.style.maxHeight = null;
+                } else {
+                    panel.style.maxHeight = panel.scrollHeight + "px";
+                }
+            });
+        }
+    </script>
 </body>
 
 </html>
