add todo list card

--- a/index.html
+++ b/index.html
@@ -246,10 +246,11 @@
                 <div class="main_body col-12">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="g-3  col-12 col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title p-2">Card title</h5>
-
+                            <div class=" col-12 col-md-8">
+                                <div class="card">
+                                    <div class="card-title p-2">
+                                        <h5>Card title</h5>
+                                    </div>
                                     <table class="table">
                                         <thead>
                                             <th class="col-4 col-md-3 col-lg-5">Nome</th>
@@ -320,39 +321,62 @@
                                     </table>
 
                                 </div>
-                                <div class="card-body">
-                                    <h5>F.A.Q.</h5>
-                                    <button class="my_accordion">Section 1</button>
-                                    <div class="my_panel">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore
-                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo
-                                            consequat.</p>
+                                <div class="card">
+                                    <div class="card-title p-2">
+                                        <h5>F.A.Q.</h5>
                                     </div>
+                                    <div class="card_body">
+                                        <button class="my_accordion">Section 1</button>
+                                        <div class="my_panel">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                                tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                                laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                        </div>
 
-                                    <button class="my_accordion">Section 2</button>
-                                    <div class="my_panel">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore
-                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo
-                                            consequat.</p>
+                                        <button class="my_accordion">Section 2</button>
+                                        <div class="my_panel">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                                tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                                laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                        </div>
+
+                                        <button class="my_accordion">Section 3</button>
+                                        <div class="my_panel">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                                tempor incididunt ut labore et dolore
+                                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                                laboris nisi ut aliquip ex ea commodo
+                                                consequat.</p>
+                                        </div>
                                     </div>
-
-                                    <button class="my_accordion">Section 3</button>
-                                    <div class="my_panel">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore
-                                            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                                            laboris nisi ut aliquip ex ea commodo
-                                            consequat.</p>
-                                    </div>
-
                                 </div>
                             </div>
                             <div class="col-12 col-md-4">
-                                <div class="card"></div>
+                                <div class="card">
+                                    <div class="card-title p-2">
+                                        <h5>Todo</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <form action="#">
+                                            <div class="check_item">
+                                                <input type="checkbox" name="check01" id="check01">
+                                                <label for="check01">prima check</label>
+                                            </div>
+                                            <div class="check_item">
+                                                <input type="checkbox" name="check01" id="check01">
+                                                <label for="check01">prima check</label>
+                                            </div>
+                                            <div class="check_item">
+                                                <input type="checkbox" name="check01" id="check01">
+                                                <label for="check01">prima check</label>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
                                 <div class="card"></div>
                             </div>
 
