--- a/index.html
+++ b/index.html
@@ -377,7 +377,27 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="card"></div>
+                                <div class="card">
+
+                                    <img src="./assets/img/stats.jpeg" class="card-img-top" alt="...">
+                                    <div class="card-title">
+                                        <h5>bla bla bla</h5>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                    <div class="month">
+                                        gennaio 2010
+                                    </div>
+                                    <div class="month">
+                                        gennaio 2010
+                                    </div>
+                                    <div class="month">
+                                        gennaio 2010
+                                    </div>
+                                    <div class="link">
+                                        <a href="#">Visualizza report approfondito</a>
+                                    </div>
+
+                                </div>
                             </div>
 
                         </div>
